[gd_scene load_steps=9 format=3 uid="uid://ct6ns3ohv1emr"]

[ext_resource type="Script" uid="uid://b221vt7th86iw" path="res://Scripts/tower_base.gd" id="1_3b0rs"]
[ext_resource type="Texture2D" uid="uid://bklemcexlpe57" path="res://Assets/Sprite-0001.png" id="2_qj07g"]
[ext_resource type="PackedScene" uid="uid://bolk5fk66ojl" path="res://Scenes/Workspace_v2.tscn" id="3_d7xmc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_sistd"]
radius = 65.00769

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dbwjx"]
bg_color = Color(0.6, 0.6, 0.6, 0)
corner_radius_top_left = 65
corner_radius_top_right = 65
corner_radius_bottom_right = 65
corner_radius_bottom_left = 65

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gcnb3"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 65
corner_radius_top_right = 65
corner_radius_bottom_right = 65
corner_radius_bottom_left = 65

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sistd"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 65
corner_radius_top_right = 65
corner_radius_bottom_right = 65
corner_radius_bottom_left = 65

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tgbgb"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
corner_radius_top_left = 65
corner_radius_top_right = 65
corner_radius_bottom_right = 65
corner_radius_bottom_left = 65

[node name="tower_base_v2" type="Control"]
layout_mode = 3
anchor_right = 1.0001667
anchor_bottom = 0.9999629
offset_right = -0.3200035
offset_bottom = 0.040000916
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="TowerBase" type="Area2D" parent="."]
script = ExtResource("1_3b0rs")

[node name="Sprite2D" type="Sprite2D" parent="TowerBase"]
texture = ExtResource("2_qj07g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TowerBase"]
visible = false
shape = SubResource("CircleShape2D_sistd")

[node name="Button" type="Button" parent="TowerBase"]
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
theme_override_styles/normal = SubResource("StyleBoxFlat_dbwjx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gcnb3")
theme_override_styles/hover = SubResource("StyleBoxFlat_sistd")
theme_override_styles/focus = SubResource("StyleBoxFlat_tgbgb")

[node name="WorkspaceToggler" type="Button" parent="TowerBase"]
visible = false
offset_left = -99.0
offset_top = -147.0
offset_right = 99.0
offset_bottom = -64.0
text = "Open workspace?"

[node name="Workspace" parent="." node_paths=PackedStringArray("myTower") instance=ExtResource("3_d7xmc")]
visible = false
layout_mode = 1
offset_top = 6.0
offset_bottom = 6.0
myTower = NodePath("../TowerBase")

[connection signal="pressed" from="TowerBase/Button" to="TowerBase" method="_on_button_pressed"]
[connection signal="pressed" from="TowerBase/WorkspaceToggler" to="TowerBase" method="_on_workspace_toggeler_pressed"]
